Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -5,6 +5,9 @@
 #wall #tag-2 {
   display: none;
 }
-#wall ."slick wicked "{
+#wall ."slick wicked" {
   display: none;
+}
+#wall .parent #tag-4 {
+    display: none;
 }
