--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,6 @@ body div#wall #tag-3.slick {
 #wall .parent #tag-4 {
     display: none;
 }
-#wall .parent #tag-5 .slick {
+div#wall div.parent #tag-5.slick {
     display: none;
 }
