--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -17,3 +17,6 @@ div#wall div.parent #tag-5.slick {
 body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
+body div#wall div.parent div > #tag-7.slick {
+  display: none;
+}
