--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -17,6 +17,6 @@ div#wall div.parent #tag-5.slick {
 body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
-body div#wall div.parent div > #tag-7.slick {
+body div#wall div.parent:last-of-type div > #tag-7.slick {
   display: none;
 }
